# seneva

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dockerfile  environment.yaml  pyproject.toml
.github/: codecov.yml  pull_request_template.md
.github/workflows/: code-quality-master.yaml  code-quality-pr.yaml  code-quality.yaml  tests.yaml
src/config/: default_train.yaml
src/config/callbacks/: default.yaml  model_summary.yaml  tqdm_progress_bar.yaml
src/config/data/: argoverse.yaml  interaction.yaml
src/config/experiment/argoverse/: baseline.yaml
src/config/experiment/interaction/: baseline.yaml
src/config/extras/: default.yaml
src/config/hydra/: default.yaml
src/config/logger/: comet.yaml  csv.yaml  default.yaml  mlflow.yaml  neptune.yaml  wandb.yaml
src/config/model/: seneva.yaml
src/config/model/metric_collection/: argoverse.yaml  interaction.yaml
src/config/paths/: default.yaml
src/config/trainer/: cpu.yaml  ddp_cpu.yaml  ddp_gpu.yaml  default.yaml  gpu.yaml  mps.yaml  tpu.yaml
src/seneva/: __init__.py  train.py
src/seneva/data/: base.py  datamodule.py  dataset.py  metrics.py  subsampler.py  transform.py  typing.py
src/seneva/model/: __init__.py  functional.py  layers.py  seneva.py
src/seneva/model/components/: attention.py  decoder.py  encoder.py  vectornet.py
src/seneva/utils/: builder.py  logging.py  rich_utils.py  tools.py
